..F....... [ZBX-22983] fixed trigger expressions dropdown ellipsing when too long options

--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -3171,6 +3171,7 @@ z-select,
       height: inherit;
       box-sizing: border-box;
       min-height: 24px;
+      max-width: 453px;
       padding: 5px;
       line-height: normal;
       color: #1f2c33;
